sample-java-webapp-jenkins-argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-app
  name: java-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - image: harbor.example.com/mantislogic/sample-java-webapp-jenkins:aa961069acff4a0f06c6219a0b59b578d94aeb46
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /java_webapp_argocd/rest/hello
              port: 8080
              scheme: HTTP
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 1
          name: web
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /java_webapp_argocd/rest/hello
              port: 8080
              scheme: HTTP
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /java_webapp_argocd/rest/hello
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
