sample-java-webapp-jenkins-argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: sample-java-webapp-jenkins-argocd-prod
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web-app
  type: ClusterIP
